# Type-17-Red-Armorded-buggy

./: .gitignore  .rosinstall  .rosinstall.bak  README.md  dependencies.rosinstall
cirkit_waypoint_manager/cirkit_waypoint_navigator/launch/: waypoint_navigator.launch
cirkit_waypoint_manager/cirkit_waypoint_navigator/waypoints/: 2018-02-08-18-03-37.csv
nishidalab_ypspur_driver/config/: red-armored-buggy.prm  red-armored-buggy.prm~
opencv_practice/: test  test.cpp
rab_bringup/: CMakeLists.txt  README.md  package.xml  package.xml~
rab_bringup/config/: rab.yaml  sanwa.yaml
rab_bringup/launch/: 3d_sensor.launch  avoidance_joy.launch  image.launch  joy_control.launch  lrf_merger.launch  multi_urg_merge.launch  multi_urg_merge.launch~  odom_listener.launch
rab_bringup/src/: .#image_viewer.cpp  flag_subscriber.cpp  image_viewer.cpp  image_viewer_hoge.cpp  joy_avoidance.cpp  odom_listener.cpp  param_test.cpp
rab_bringup/src/opencv_practice/: hogecmp  test  test.cpp
rab_control/: CMakeLists.txt  package.xml  package.xml~
rab_control/config/: controller.yaml
rab_control/launch/: rab_control.launch  rab_control.launch~
rab_description/: CMakeLists.txt  package.xml
rab_description/config/: amcl.rviz  description.rviz  move_base.rviz
rab_description/launch/: rab_description.launch  rab_description.launch~  rab_states.launch
rab_description/mesh/DAE/wheel_link/: center_wheel_link.dae  left_wheel_link.dae
rab_description/mesh/STL/: base_link.stl  center_wheel_link.stl  right_lrf_link.stl  threed_sensor_link.stl
rab_description/meshes/DAE/wheel/: right_wheel_link.dae
rab_description/meshes/STL/: base_link.stl  left_lrf_link.stl  left_wheel_link.stl  right_wheel_link.stl
rab_description/robots/: hoge.urdf  rab.urdf.xacro  rab.urdf.xacro~
rab_description/urdf/: #common.xacro#  .#common.xacro  common.xacro
rab_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro
rab_description/urdf/sensors/lrf/: lrf.gazebo.xacro  lrf.urdf.xacro  lrf.urdf.xacro~
rab_description/urdf/wheel/: wheel.gazebo.xacro  wheel.transmission.xacro  wheel.urdf.xacro
rab_gazebo/: CMakeLists.txt  package.xml
rab_gazebo/launch/: rab_with_empty_world.launch  rab_with_playpen_world.launch  rab_with_willowgarage_world.launch
rab_navigation/: CMakeLists.txt  package.xml
rab_navigation/launch/: amcl_3rddemo.launch  amcl_3rddemo.launch~  move_base_corridor.launch  move_base_nda.launch  move_base_playpen.launch
rab_navigation/launch/amcl/: amcl_3rddemo.launch  amcl_corridor.launch  amcl_nda.launch  amcl_nda_withoutrviz.launch  amcl_playpen.launch  amcl_playpen_withoutrviz.launch
rab_navigation/map/department_briefing/: 3rd_demo_add.yaml
rab_navigation/map/nda/: 0123_mod.yaml  false.pgm  false.yaml  false_2.pgm  false_2.yaml  nda_1lap.yaml
rab_navigation/map/remote/: ttlab.yaml
rab_navigation/params/costmap/: costmap_common.yaml  local_costmap.yaml
rab_navigation/params/planner/global/: navfn_planner.yaml
rab_navigation/params/planner/local/: dwa_planner.yaml
rab_network/: CMakeLists.txt  package.xml
rab_network/src/: idea.txt
simple_navi_pack/: CMakeLists.txt  package.xml  readme
simple_navi_pack/launch/: gmapping.launch  simple_obstacle_avoidance.launch  simple_trajectory_drawer.launch  simple_trajectory_recorder.launch  simple_trajectory_tracker.launch
simple_navi_pack/src/: .#simple_obstacle_avoidance.cpp  simple_obstacle_avoidance.cpp  simple_trajectory_drawer.cpp  simple_trajectory_recorder.cpp  simple_trajectory_tracker.cpp
