<?xml version="1.0"?>
<package>
  <name>rab_bringup</name>
  <version>0.0.0</version>
  <description>The rab_bringup package</description>
  
  <maintainer email="ryu.j.shibu@gmail.com">Masato Shibuya</maintainer>
  <author email="ryu.j.shibu@gmail.com">Masato Shibuya</author>
  
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>joy_twist</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>ira_laser_tools</run_depend>
  
</package>