<?xml version="1.0"?>
<package format="2">
  <name>rab_bringup</name>
  <version>0.0.0</version>
  <description>The rab_bringup package</description>
  
  <maintainer email="ryu.j.shibu@gmail.com">Masato Shibuya</maintainer>
  <author email="ryu.j.shibu@gmail.com">Masato Shibuya</author>
  
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslib</depend>
  <depend>roscpp</depend>
  <depend>opencv2</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joy</depend>
  <depend>joy_twist</depend>
  <depend>urg_node</depend>
  <depend>ira_laser_tools</depend>
  
</package>