<?xml version="1.0"?>
<package>
  <name>rab_description</name>
  <version>2.0.0</version>
  <description>The rab_description package</description>

  <maintainer email="ryu.j.shibu@gmail.com">Masato Shibuya</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/rab_description</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rviz</run_depend>

</package>
