<?xml version="1.0"?>
<package>
  <name>rab_network</name>
  <version>0.0.0</version>
  <description>The rab_network package</description>

  <maintainer email="ryu.j.shibu@gmail.com">Shibuya Masato</maintainer>
  <license>TODO</license>
  <author email="ryu.j.shibu@gmail.com">Shibuya Masato</author> -->

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
  
</package>
