<?xml version="1.0"?>
<package>
  <name>simple_trajectory_tools</name>
  <version>0.0.0</version>
  <description>The simple_trajectory_tools package</description>
  
  <author email="akai@coi.nagoya-u.ac.jp">Naoki Akai</author>
  <maintainer email="ryu.j.shibu@gmail.com">Masato Shibuya</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

</package>